@@ -14,20 +14,25 @@
 #define USHOCKTYPE_VIRTUAPIN	4
 #define USHOCKTYPE_GENERIC		5
 
+// Input type ID - keyboard
 #define APP_KEYBOARD 0
-#define APP_JOYSTICKMN 1
-#define APP_MOUSE 2
 
+// Input type ID - mouse
+#define APP_MOUSE 1
+
+// Input type ID - joystick 1 through 4
 // handle multiple joysticks, APP_JOYSTICKMN..APP_JOYSTICKMX
+#define APP_JOYSTICKMN 2
 #define PININ_JOYMXCNT 4
+#define APP_JOYSTICK(n) (APP_JOYSTICKMN + (n))
+#define APP_JOYSTICKMX  (APP_JOYSTICK(PININ_JOYMXCNT - 1))
 
+
+// Joystick axis normalized input range
 #define JOYRANGEMN (-65536)
 #define JOYRANGEMX (+65536)
-
 #define JOYRANGE ((JOYRANGEMX) - (JOYRANGEMN) + 1)
 
-#define APP_JOYSTICKMX (APP_JOYSTICKMN + PININ_JOYMXCNT -1)
-#define APP_JOYSTICK(n) (APP_JOYSTICKMN + n)
 
 class PinInput
 {
@@ -80,7 +85,7 @@ public:
 #endif
 
 	HWND m_hwnd;
-	
+
 	int e_JoyCnt;
 	int uShockDevice;	// only one uShock device
 	int uShockType;
